--- a/css/style.css
+++ b/css/style.css
@@ -408,14 +408,14 @@ body > section {
 	color: #EF6302;
 }
 #pricing ul li a {
-	background: url("../img/download-inverse.png") no-repeat scroll 13% 23px #7CBCE2;
+	/*background: url("../img/download-inverse.png") no-repeat scroll 13% 23px #7CBCE2;*/
 	border-radius: 5px 5px 5px 5px;
 	color: #FFFFFF;
 	display: block;
 	font-family: 'Oswald', sans-serif !important;
 	font-size: 22px;
 	margin: 0 auto;
-	padding: 25px 10px 23px 56px;
+	padding: 25px 10px 23px 10px;
 	text-transform: uppercase;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
