--- a/css/style.css
+++ b/css/style.css
@@ -896,3 +896,16 @@ min-width: 15px !important;
 	margin: 2px 0;
 }
 }
+@keyframes animatedBackground {
+	from { background-position: 0 0; }
+	to { background-position: 100% 0; }
+}
+#animate-area	{ 
+	width: 560px; 
+	height: 400px; 
+	background-image: url(http://davidwalsh.name/demo/bg-clouds.png);
+	background-position: 0px 0px;
+	background-repeat: repeat-x;
+
+	animation: animatedBackground 40s linear infinite;
+}
